--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.6.20" }
+axum = { version = "0.8.7" }
+futures-util = "0.3.31"
 tokio = { version = "1.48.0", features = ["full"] }
-tower-http = { version = "0.4.4", features = ["cors", "trace", "limit"] }
+tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
+
+redis = "0.32.7"
 
 tracing = "0.1.41"
 tracing-subscriber = "0.3"
@@ -17,5 +20,6 @@ serde_json = "1.0.117"
 anyhow = "1.0.86"
 dotenvy = "0.15.7"
 envy = "0.4.2"
+thiserror = "2.0.17"
 
 reqwest = "0.12.24"
