--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ futures-util = "0.3.31"
 tokio = { version = "1.48.0", features = ["full"] }
 tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
 
-redis = "0.32.7"
+redis = { version = "1.0.0", features = ["cluster-async", "tokio-comp"] }
 
 tracing = "0.1.41"
 tracing-subscriber = "0.3"
